# medrag-toolkit

./: .gitignore  pyproject.toml
.github/workflows/: ci.yml
docker/: Dockerfile  docker-compose.yml
examples/: quickstart.py
src/medrag_toolkit/: __init__.py  cli.py  config.py  core.py
src/medrag_toolkit/api/: __init__.py  app.py  models.py  routes.py
src/medrag_toolkit/citation/: __init__.py  extractor.py  verifier.py
src/medrag_toolkit/generation/: __init__.py  base.py  ollama.py
src/medrag_toolkit/hallucination/: __init__.py  detector.py
src/medrag_toolkit/knowledge/: __init__.py  base.py  drug_kb.py  indexer.py  pubmed.py
src/medrag_toolkit/retrieval/: __init__.py  base.py  dense.py  hybrid.py
tests/integration/: test_pipeline.py
tests/unit/: test_citation.py  test_config.py  test_drug_kb.py  test_hallucination.py  test_pubmed.py  test_retrieval.py
